--- a/style.css
+++ b/style.css
@@ -19,10 +19,11 @@ html {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding: 1rem 4rem 3rem;
 }
 
 header {
-  height: 8rem;
+  height: 7rem;
   background-color: aqua;
 }
 
