--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   font-size: inherit;
   font-family: 'Roboto';
-  color: #fff;
+  color: rgb(82, 82, 82);
 }
 
 html {
@@ -22,9 +22,58 @@ html {
   padding: 1rem 4rem 3rem;
 }
 
+/* header */
+
 header {
   height: 7rem;
-  background-color: aqua;
+}
+
+.sign-in-container {
+  display: grid;
+  grid-template: auto / auto auto;
+  justify-content: end;
+  align-items: center;
+  justify-items: center;
+}
+
+.sign-in-container p,
+.sign-in-container a {
+  font-size: 1.2rem;
+}
+
+.sign-in-container a {
+  text-decoration: none;
+  color: rgb(0, 119, 197);
+}
+
+.sign-in-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 1rem;
+  grid-column: 2;
+  grid-row: 1 / 3;
+  height: 3.4rem;
+  width: 10rem;
+  border-radius: 5px;
+  border: 1px solid rgb(82, 82, 82);
+  background-color: rgb(0, 119, 197);
+  color: #fff;
+}
+
+.sign-in-btn span {
+  font-size: 1.3rem;
+  color: #fff;
+}
+
+.lock-img {
+  width: 2.4rem;
+  height: 2.4rem;
+  margin-left: -6px;
+  background-image: url(https://plugin.intuitcdn.net/identity-authn-core-ui/images/icon-whitelock@3x-76f33cec.png);
+  background-size: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 main {
