add style rules for footer

--- a/style.css
+++ b/style.css
@@ -80,9 +80,29 @@ main {
   background-color: crimson;
 }
 
+/* footer */
+
 footer {
-  height: 10rem;
-  background-color: blueviolet;
+  text-align: center;
+  font-size: 1.3rem;
+  line-height: 1.4;
+}
+
+footer li {
+  display: inline-block;
+}
+
+footer li + li {
+  padding-left: 1rem;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+footer a:hover,
+footer a:focus {
+  text-decoration: underline;
 }
 
 /* aside */
