--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ form button span {
 
 .terms {
   padding: 40px 0px;
+  margin-bottom: 20px;
   text-align: center;
   line-height: 1.6;
   font-size: 1.2rem;
