--- a/style.css
+++ b/style.css
@@ -88,8 +88,11 @@ main {
 
 .form-wrapper {
   margin: 0 auto;
-  padding: 30px;
   width: 380px;
+}
+
+form {
+  padding: 30px;
   border-radius: 2px;
   border: 1px solid rgb(199, 199, 199);
   background-color: #fff;
