--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ ul li {
   list-style-type: none;
 }
 
+i {
+  display: inline-block;
+}
+
 html {
   font-size: 10px;
 }
@@ -84,6 +88,122 @@ body {
 main {
   flex-grow: 1;
   margin: 2rem 0;
+}
+
+.logo-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo {
+  width: 118px;
+  height: 36px;
+  opacity: 0;
+  background-image: url(https://plugin.intuitcdn.net/identity-authn-core-ui/images/ecosystem_logos_new-a1ca21cc.png);
+  animation: appear 2s 1s forwards;
+}
+
+.sub-logo {
+  width: 380px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 20px 0;
+}
+
+.sub-logo li {
+  display: flex;
+}
+
+.sub-logo li * {
+  height: 24px;
+}
+
+.sub-logo li + li {
+  margin-left: 10px;
+}
+
+.sub-logo i {
+  position: absolute;
+  visibility: hidden;
+  animation: translate 600ms 1.1s forwards;
+}
+
+.logo-ico {
+  width: 24px;
+}
+
+.logo-text {
+  margin-left: 3px;
+}
+
+i.mint-logo {
+  position: initial;
+  visibility: initial;
+  background: url(https://plugin.intuitcdn.net/identity-authn-core-ui/images/mint-favicon-4accf8f4.svg)
+    no-repeat;
+  animation: pulse 500ms 2 alternate, translate 600ms 1.1s forwards;
+}
+
+.mint-text-logo {
+  width: 40px;
+  background: url(https://plugin.intuitcdn.net/identity-authn-core-ui/images/mint-text-0fa36974.svg)
+    no-repeat;
+  background-position: center;
+}
+
+.quickbooks-logo {
+  background: url(https://plugin.intuitcdn.net/identity-authn-core-ui/images/quickbooks-favicon@2x-c89488e8.svg)
+    no-repeat;
+}
+
+.quickbooks-text-logo {
+  width: 100px;
+  background: url(https://plugin.intuitcdn.net/identity-authn-core-ui/images/quick-books-text-db6c72bf.svg)
+    no-repeat;
+  background-position: center;
+}
+
+.turbotax-logo {
+  background: url(https://plugin.intuitcdn.net/identity-authn-core-ui/images/tt-favicon@2x-fbd64ab8.svg)
+    no-repeat;
+}
+
+.turbotax-text-logo {
+  width: 75px;
+  background: url(https://plugin.intuitcdn.net/identity-authn-core-ui/images/turbo-tax-text-9bc025c5.svg)
+    no-repeat;
+  background-position: center;
+}
+
+@keyframes pulse {
+  100% {
+    transform: scale(2);
+  }
+}
+
+@keyframes translate {
+  0% {
+    position: initial;
+    visibility: initial;
+    opacity: 0;
+    transform: translateX(40px);
+  }
+
+  100% {
+    position: initial;
+    visibility: initial;
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes appear {
+  100% {
+    opacity: 1;
+  }
 }
 
 .form-wrapper {
