--- a/style.css
+++ b/style.css
@@ -210,6 +210,18 @@ i.mint-logo {
   width: 380px;
 }
 
+@media only screen and (max-width: 760px) {
+  header {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 440px) {
+  .form-wrapper {
+    width: auto;
+  }
+}
+
 form {
   padding: 30px;
   border-radius: 2px;
