--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ main {
 .sub-logo i {
   position: absolute;
   visibility: hidden;
-  animation: translate 600ms 1.1s forwards;
+  animation: translate ease-out 600ms 1s forwards;
 }
 
 .logo-ico {
@@ -139,7 +139,7 @@ i.mint-logo {
   visibility: initial;
   background: url(https://plugin.intuitcdn.net/identity-authn-core-ui/images/mint-favicon-4accf8f4.svg)
     no-repeat;
-  animation: pulse 500ms 2 alternate, translate 600ms 1.1s forwards;
+  animation: pulse 500ms 2 alternate, translate ease-out 600ms 1s forwards;
 }
 
 .mint-text-logo {
